# xdts_viewer

./: .gitignore  LICENSE  README.md
.github/workflows/: workflow_macos.yml  workflow_windows.yml
doc/: README_ja.md  how_to_build_macosx.md  how_to_build_macosx_ja.md  how_to_build_win.md  how_to_build_win_ja.md
macos/: BundleInfo.plist.in
sources/: CMakeLists.txt  XDTS_Viewer.icns  aetool.cpp  aetool.h  commandmanager.cpp  commandmanager.h  dialogs.cpp  dialogs.h  dyetool.cpp  dyetool.h  instancemanager.cpp  instancemanager.h  linetool.cpp  main.cpp  mixupkeydialog.cpp  mixupkeydialog.h  myparams.cpp  myparams.h  mywindow.cpp  mywindow.h  mywindow_psdexport.cpp  pathutils.cpp  pathutils.h  selectiontool.cpp  tool.cpp  tool.h  xdts_viewer.rc  xdts_viewer_resources.qrc  xdtsio.cpp  xdtsio.h  xsheetpreviewarea.cpp  xsheetpreviewarea.h
sources/loc/: XDTS_Viewer_ja.qm
sources/translations/: XDTS_Viewer_ja.ts  XDTS_Viewer_zh_CN.ts
xdts_viewer_resources/: defaultconfig.ini
xdts_viewer_resources/LICENSE/: LICENSE.txt  LICENSE_psd_sdk.txt
xdts_viewer_resources/loc/: XDTS_Viewer_ja.qm  XDTS_Viewer_zh_CN.qm
xdts_viewer_resources/xsheettemplates/: ponoc_6sec.ini
